--- a/MyPack/config/zombieawareness/Features.toml
+++ b/MyPack/config/zombieawareness/Features.toml
@@ -12,7 +12,7 @@
 	#Pistons cause sound sense sources attracting monsters
 	noisyPistons = true
 	#Causes monsters to horde up and wander the surface together to random points
-	wanderingHordes = false
+	wanderingHordes = true
 	#How often in seconds we set a random point around a player for mobs to wander to from far away. Makes mobs path around more, dont use if you have TPS performance issues.
 	#Range: > -2147483648
 	frequencyOfWanderingHordesPerPlayer = 30
@@ -25,7 +25,7 @@
 	#Enhanced mobs will make a sound when they target you
 	soundAlerts = true
 	#Any hostile mob that targets you will make a sound, even if not enhanced
-	soundAlertsForAllAttackingMobs = false
+	soundAlertsForAllAttackingMobs = true
 	#Enhanced mobs will make a sound when they are investigating a sense near you
 	soundInvestigates = true
 	#Uses a different kind of mob alert noise, might break immersion a bit ;)
