server update 2kms ping currently

--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
-#Thu May 29 12:46:34 ICT 2025
-allow-flight=false
+#Thu May 29 16:04:38 ICT 2025
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
