Changes to be committed: 	modified:   MyPack/config/bettervillage_1.properties 	deleted:    MyPack/config/configurableextramobdrops/mobdropconfig.txt 	deleted:    MyPack/config/firstjoinmessage.json5 	deleted:    MyPack/config/forgivingworld.json 	modified:   MyPack/config/jei/world/server/ME_SERVER_1ab5541a/bookmarks.ini 	modified:   MyPack/config/libraryferret_1.properties 	modified:   MyPack/config/oculus.properties 	deleted:    MyPack/config/packetfixer.properties 	deleted:    MyPack/config/starterkit/descriptions/starterkit.txt 	modified:   MyPack/config/starterkit/kits/Default.txt 	deleted:    MyPack/config/starterkit/kits/inactive/Default.txt 	deleted:    MyPack/config/starterkit/kits/starterkit.txt 	new file:   MyPack/mods/betterfpsdist-1.20.1-6.0.jar 	deleted:    MyPack/mods/configurableextramobdrops-1.20.1-3.5.jar 	deleted:    MyPack/mods/firstjoinmessage-1.20.1-3.8.jar 	deleted:    MyPack/mods/forgivingworld-1.20.1-4.7.jar 	deleted:    MyPack/mods/incontrol-1.20-9.3.2.jar 	deleted:    MyPack/mods/nobz-1.2.jar 	deleted:    MyPack/mods/packetfixer-forge-2.0.0-1.19-to-1.20.1.jar

--- a/MyPack/config/jei/world/server/ME_SERVER_1ab5541a/bookmarks.ini
+++ b/MyPack/config/jei/world/server/ME_SERVER_1ab5541a/bookmarks.ini
@@ -1,1 +1,4 @@
 T:{Count:1b,id:"agricraft:seed",tag:{genes:{fertility:{dom:1,rec:1},gain:{dom:1,rec:1},growth:{dom:1,rec:1},mutativity:{dom:1,rec:1},resistance:{dom:1,rec:1},species:{dom:"minecraft:oxeye_daisy",rec:"minecraft:oxeye_daisy"},strength:{dom:1,rec:1}}}}
+R:minecraft:crafting#refurbished_furniture:brown_sofa_from_dyeing#item_stack&refurbished_furniture:brown_sofa
+R:refurbished_furniture:workbench_constructing#refurbished_furniture:constructing/white_sofa#item_stack&refurbished_furniture:white_sofa
+R:minecraft:crafting#refurbished_furniture:light_electricity_generator#item_stack&refurbished_furniture:light_electricity_generator
